Update syntax to match Java 21 specs